--- a/01_data_preparation.ipynb
+++ b/01_data_preparation.ipynb
@@ -31,7 +31,7 @@
     }
    ],
    "source": [
-    "# ==== Perf environment (set before heavy imports) ====\n",
+    "# Configure BLAS thread counts early to stabilize performance across runs\n",
     "import os\n",
     "os.environ.setdefault(\"OMP_NUM_THREADS\", \"8\")\n",
     "os.environ.setdefault(\"OPENBLAS_NUM_THREADS\", \"8\")\n",
@@ -43,7 +43,7 @@
     "      os.environ.get(\"MKL_NUM_THREADS\"),\n",
     "      os.environ.get(\"NUMEXPR_NUM_THREADS\"))\n",
     "\n",
-    "# Timing helpers\n",
+    "# Lightweight phase timing utility for coarse profiling of notebook stages\n",
     "import time, json\n",
     "from contextlib import contextmanager\n",
     "from collections import defaultdict\n",
@@ -58,6 +58,7 @@
     "    def to_dict(self): return dict(self.t)\n",
     "\n",
     "def pretty_seconds(sec):\n",
+    "    # Present durations in human‑friendly units\n",
     "    return f\"{sec/60:.1f} min\" if sec >= 60 else f\"{sec:.1f} s\""
    ]
   },
@@ -87,6 +88,7 @@
     }
    ],
    "source": [
+    "# Core imports and library setup\n",
     "from pathlib import Path\n",
     "import json, os, warnings, sys, time\n",
     "import numpy as np\n",
@@ -96,6 +98,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "np.random.seed(123)\n",
     "\n",
+    "# Define key project directories and ensure they exist\n",
     "ROOT = Path(\".\")\n",
     "DATA = ROOT / \"data\"\n",
     "RAW = DATA / \"raw\"\n",
@@ -104,12 +107,12 @@
     "for p in [RAW, PROCESSED, RESULTS]:\n",
     "    p.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "# ---- Config ----\n",
+    "# Runtime configuration (override with environment variables if desired)\n",
     "ACCESSION = os.environ.get(\"NCBI_ACCESSION\", \"KF986530.1\")\n",
-    "EMAIL = os.environ.get(\"NCBI_EMAIL\", \"you@example.com\")  # <- set your real email or export NCBI_EMAIL\n",
+    "EMAIL = os.environ.get(\"NCBI_EMAIL\", \"you@example.com\")  # Supply a real email to comply with NCBI policy\n",
     "Entrez.email = EMAIL\n",
     "\n",
-    "# Windowing\n",
+    "# Sliding window parameters for sequence segmentation\n",
     "W = int(os.environ.get(\"WINDOW_LEN\", \"256\"))\n",
     "STRIDE = int(os.environ.get(\"WINDOW_STRIDE\", \"128\"))\n",
     "\n",
@@ -138,11 +141,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⬇️  Downloaded: data\\raw\\KF986530.1.gb\n"
+      "✅ Using cached: data\\raw\\KF986530.1.gb\n"
      ]
     }
    ],
    "source": [
+    "# Download (with caching + simple retry) the GenBank record for the target accession\n",
+    "# Returns the local path to the .gb file (reuses existing non‑empty file).\n",
     "def fetch_genbank(accession: str, out_file: Path, retries=3, delay=2.0) -> Path:\n",
     "    if out_file.exists() and out_file.stat().st_size > 0:\n",
     "        print(\"✅ Using cached:\", out_file)\n",
@@ -231,7 +236,7 @@
          "type": "integer"
         }
        ],
-       "ref": "1ae9c800-196f-4fca-940f-52d76b45fe84",
+       "ref": "47861b2f-2880-4d02-8af8-c9db2792616b",
        "rows": [
         [
          "0",
@@ -376,13 +381,15 @@
     }
    ],
    "source": [
+    "# Parse GenBank feature table and retain coding (CDS) and structural RNA (tRNA/rRNA) regions\n",
+    "# Assign label 1 to CDS (positive) and 0 to RNA (negative) for downstream classification tasks.\n",
     "record = SeqIO.read(GB_PATH, \"genbank\")\n",
     "seq = record.seq\n",
     "rows = []\n",
     "for f in record.features:\n",
     "    if f.type not in (\"CDS\", \"tRNA\", \"rRNA\"):\n",
     "        continue\n",
-    "    if \"pseudo\" in f.qualifiers:\n",
+    "    if \"pseudo\" in f.qualifiers:  # Skip annotated pseudogenes\n",
     "        continue\n",
     "    start, end = int(f.location.start), int(f.location.end)\n",
     "    lab = 1 if f.type == \"CDS\" else 0\n",
@@ -423,18 +430,22 @@
     }
    ],
    "source": [
+    "# Generate fixed-length sliding windows from annotated regions and compute multiple encodings\n",
     "from collections import Counter\n",
     "import itertools\n",
     "\n",
     "def one_hot_encode(s: str):\n",
+    "    # Map A/C/G/T to one‑hot rows; unknowns remain zeros\n",
     "    m = {\"A\":0, \"C\":1, \"G\":2, \"T\":3}\n",
     "    X = np.zeros((len(s), 4), dtype=np.float32)\n",
     "    for i,ch in enumerate(s.upper()):\n",
-    "        j = m.get(ch); \n",
-    "        if j is not None: X[i, j] = 1.0\n",
+    "        j = m.get(ch)\n",
+    "        if j is not None:\n",
+    "            X[i, j] = 1.0\n",
     "    return X\n",
     "\n",
     "def kmer_counts(s: str, k=3):\n",
+    "    # Normalized frequency vector over all possible k‑mers (lexicographic A,C,G,T ordering)\n",
     "    bases = [\"A\",\"C\",\"G\",\"T\"]\n",
     "    kmers = [\"\".join(p) for p in itertools.product(bases, repeat=k)]\n",
     "    c = Counter(s[i:i+k] for i in range(len(s)-k+1))\n",
@@ -443,17 +454,19 @@
     "    return v / sm if sm > 0 else v\n",
     "\n",
     "def angle_encode(s: str):\n",
+    "    # Encode nucleotides as phase angles on the unit circle (0, pi/2, pi, 3pi/2)\n",
     "    am = {\"A\":0.0, \"C\":np.pi/2, \"G\":np.pi, \"T\":3*np.pi/2}\n",
     "    return np.array([am.get(ch.upper(), 0.0) for ch in s], dtype=np.float32)\n",
     "\n",
     "windows, labels = [], []\n",
     "for r in df_feats.itertuples():\n",
     "    sub = str(seq[r.start:r.end])\n",
-    "    if len(sub) < W: \n",
+    "    if len(sub) < W:\n",
     "        continue\n",
     "    for off in range(0, len(sub) - W + 1, STRIDE):\n",
     "        chunk = sub[off:off+W]\n",
-    "        windows.append(chunk); labels.append(r.label)\n",
+    "        windows.append(chunk)\n",
+    "        labels.append(r.label)\n",
     "\n",
     "windows = np.array(windows, dtype=object)\n",
     "y = np.array(labels, dtype=np.int64)\n",
@@ -483,9 +496,10 @@
     }
    ],
    "source": [
-    "X_onehot = np.stack([one_hot_encode(w) for w in windows])     # [N, W, 4]\n",
-    "X_kmer   = np.stack([kmer_counts(w, k=3) for w in windows])   # [N, 64]\n",
-    "X_angle  = np.stack([angle_encode(w) for w in windows])       # [N, W]\n",
+    "# Materialize numerical encodings and persist to compressed disk artifacts for reuse\n",
+    "X_onehot = np.stack([one_hot_encode(w) for w in windows])     # Shape: [N, W, 4]\n",
+    "X_kmer   = np.stack([kmer_counts(w, k=3) for w in windows])   # Shape: [N, 64]\n",
+    "X_angle  = np.stack([angle_encode(w) for w in windows])       # Shape: [N, W]\n",
     "\n",
     "np.savez_compressed(PROCESSED/\"encodings.npz\",\n",
     "                    y=y, onehot=X_onehot, kmer=X_kmer, angle=X_angle,\n",
@@ -523,16 +537,18 @@
     }
    ],
    "source": [
+    "# Create stratified train/validation/test splits preserving class balance\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "idx = np.arange(len(y))\n",
     "\n",
-    "# test=20%; val=20% total (25% of remaining)\n",
+    "# First: carve out 20% test. Second: take 25% of remaining (i.e. 20% overall) as validation.\n",
     "tr_idx, te_idx = next(StratifiedShuffleSplit(n_splits=1, test_size=0.20, random_state=42).split(idx, y))\n",
     "tr_sub, va_idx = next(StratifiedShuffleSplit(n_splits=1, test_size=0.25, random_state=43).split(tr_idx, y[tr_idx]))\n",
     "tr_idx = tr_idx[tr_sub]\n",
     "\n",
     "splits = {\"train\": tr_idx.tolist(), \"val\": va_idx.tolist(), \"test\": te_idx.tolist()}\n",
-    "with open(PROCESSED/\"splits.json\",\"w\") as f: json.dump(splits, f, indent=2)\n",
+    "with open(PROCESSED/\"splits.json\",\"w\") as f:\n",
+    "    json.dump(splits, f, indent=2)\n",
     "{k: len(v) for k,v in splits.items()}"
    ]
   },
@@ -567,6 +583,7 @@
     }
    ],
    "source": [
+    "# Compile a concise dataset audit summary for quick reproducibility checks\n",
     "audit = {\n",
     "    \"n_samples\": int(len(y)),\n",
     "    \"positives\": int(y.sum()),\n",
