--- a/02_classical_baselines.ipynb
+++ b/02_classical_baselines.ipynb
@@ -31,7 +31,7 @@
     }
    ],
    "source": [
-    "# (same perf env as 01 Cell 0)\n",
+    "# Standardize BLAS thread usage to reduce run-to-run variability\n",
     "import os\n",
     "os.environ.setdefault(\"OMP_NUM_THREADS\", \"8\")\n",
     "os.environ.setdefault(\"OPENBLAS_NUM_THREADS\", \"8\")\n",
@@ -63,6 +63,7 @@
     }
    ],
    "source": [
+    "# Load encoded sequence representations and train/val/test indices\n",
     "from pathlib import Path\n",
     "import json, warnings\n",
     "import numpy as np, pandas as pd\n",
@@ -104,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Evaluate with threshold chosen on validation (max F1)\n",
+    "# Fit classifier; choose decision threshold maximizing validation F1; return per-split metrics & probabilities\n",
     "def eval_with_threshold(pipe, X_tr, y_tr, X_va, y_va, X_te, y_te, name=\"svm\"):\n",
     "    pipe.fit(X_tr, y_tr)\n",
     "    p_va = pipe.predict_proba(X_va)[:,1]\n",
@@ -113,15 +114,18 @@
     "    from sklearn.metrics import f1_score\n",
     "    for t in thr_grid:\n",
     "        f1 = f1_score(y_va, (p_va >= t).astype(int), zero_division=0)\n",
-    "        if f1 > best_f1: best_thr, best_f1 = float(t), float(f1)\n",
+    "        if f1 > best_f1:\n",
+    "            best_thr, best_f1 = float(t), float(f1)\n",
     "\n",
     "    def pack(X, y, split):\n",
     "        p = pipe.predict_proba(X)[:,1]\n",
     "        yhat = (p >= best_thr).astype(int)\n",
     "        acc = accuracy_score(y, yhat)\n",
     "        prec, rec, f1, _ = precision_recall_fscore_support(y, yhat, average=\"binary\", zero_division=0)\n",
-    "        try: auc = roc_auc_score(y, p)\n",
-    "        except: auc = float(\"nan\")\n",
+    "        try:\n",
+    "            auc = roc_auc_score(y, p)\n",
+    "        except Exception:\n",
+    "            auc = float(\"nan\")\n",
     "        cm = confusion_matrix(y, yhat)\n",
     "        return dict(model=name, split=split, acc=acc, prec=prec, rec=rec, f1=f1, auc=auc, thr=best_thr), cm, p\n",
     "\n",
@@ -165,6 +169,7 @@
     }
    ],
    "source": [
+    "# Radial basis SVM on normalized k-mer frequency vectors\n",
     "svm_kmer = make_pipeline(\n",
     "    StandardScaler(with_mean=True, with_std=True),\n",
     "    SVC(C=5.0, kernel=\"rbf\", gamma=\"scale\", probability=True, class_weight=\"balanced\", random_state=0)\n",
@@ -208,6 +213,7 @@
     }
    ],
    "source": [
+    "# RBF SVM on flattened one-hot sequence encoding (high-dimensional sparse-ish features)\n",
     "X_flat = X_onehot.reshape(len(X_onehot), -1).astype(np.float32)\n",
     "svm_1hot = make_pipeline(\n",
     "    StandardScaler(with_mean=True, with_std=True),\n",
