--- a/03_quantum_kernel.ipynb
+++ b/03_quantum_kernel.ipynb
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "# (same perf env as 01 Cell 0)\n",
+    "# Normalize thread usage for reproducible classical linear algebra performance\n",
     "import os\n",
     "os.environ.setdefault(\"OMP_NUM_THREADS\", \"8\")\n",
     "os.environ.setdefault(\"OPENBLAS_NUM_THREADS\", \"8\")\n",
@@ -57,6 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports: classical preprocessing + PennyLane for quantum kernel construction\n",
     "from pathlib import Path\n",
     "import json, warnings, numpy as np, pandas as pd\n",
     "\n",
@@ -92,13 +93,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load k-mer features, apply PCA for dimensionality reduction, then scale & map to rotation angles\n",
     "data = np.load(PROCESSED/\"encodings.npz\", allow_pickle=True)\n",
     "with open(PROCESSED/\"splits.json\") as f:\n",
     "    SPL = json.load(f)\n",
     "y = data[\"y\"]; X_kmer = data[\"kmer\"].astype(np.float32)\n",
     "tr_idx = np.array(SPL[\"train\"]); va_idx = np.array(SPL[\"val\"]); te_idx = np.array(SPL[\"test\"])\n",
     "\n",
-    "D = 8\n",
+    "D = 8  # Number of principal components / qubits\n",
     "pca = PCA(n_components=D, random_state=7)\n",
     "X_tr_p = pca.fit_transform(X_kmer[tr_idx])\n",
     "X_va_p = pca.transform(X_kmer[va_idx])\n",
@@ -125,6 +127,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define embedding circuit and kernel evaluation (overlap) using an adjoint construction\n",
+    "\n",
     "def make_device(n_wires, shots=None):\n",
     "    try:\n",
     "        return qml.device(\"lightning.qubit\", wires=n_wires, shots=shots)\n",
@@ -148,7 +152,7 @@
     "def kernel_circuit(x1, x2):\n",
     "    U(x1)\n",
     "    qml.adjoint(U)(x2)\n",
-    "    # Probability of |0...0> as a scalar:\n",
+    "    # Return fidelity with |0...0>; equals squared inner product of embedded states\n",
     "    return qml.expval(qml.Projector([0]*n_wires, wires=wires))"
    ]
   },
@@ -172,20 +176,31 @@
      "text": [
       " row 50/894 ready\n",
       " row 100/894 ready\n",
+      " row 100/894 ready\n",
+      " row 150/894 ready\n",
       " row 150/894 ready\n",
       " row 200/894 ready\n",
+      " row 200/894 ready\n",
+      " row 250/894 ready\n",
       " row 250/894 ready\n",
       " row 300/894 ready\n",
+      " row 300/894 ready\n",
+      " row 350/894 ready\n",
       " row 350/894 ready\n",
       " row 400/894 ready\n",
+      " row 400/894 ready\n",
+      " row 450/894 ready\n",
       " row 450/894 ready\n",
       " row 500/894 ready\n",
+      " row 500/894 ready\n",
+      " row 550/894 ready\n",
       " row 550/894 ready\n",
       " row 600/894 ready\n",
+      " row 600/894 ready\n",
+      " row 650/894 ready\n",
       " row 650/894 ready\n",
       " row 700/894 ready\n",
-      " row 750/894 ready\n",
-      " row 800/894 ready\n",
+      " row 700/894 ready\n",
       " row 850/894 ready\n",
       " row 894/894 ready\n",
       " row 50/298 ready\n",
@@ -214,6 +229,7 @@
     }
    ],
    "source": [
+    "# Build Gram matrices (train-train, val-train, test-train) via pairwise quantum kernel evaluations\n",
     "def gram_matrix(XA, XB):\n",
     "    K = np.zeros((len(XA), len(XB)), dtype=np.float64)\n",
     "    for i in range(len(XA)):\n",
@@ -223,7 +239,7 @@
     "            print(f\" row {i+1}/{len(XA)} ready\")\n",
     "    return K\n",
     "\n",
-    "MAX_TRAIN = 2000  # set None to use all\n",
+    "MAX_TRAIN = 2000  # Truncate training set for kernel cost; set None for full usage\n",
     "sel_tr = tr_idx[: (MAX_TRAIN or len(tr_idx))]\n",
     "Xtr_sel, ytr_sel = Xtr[:len(sel_tr)], y[sel_tr]\n",
     "\n",
@@ -268,6 +284,7 @@
     }
    ],
    "source": [
+    "# Train SVM with precomputed quantum kernel; report metrics per split\n",
     "from sklearn.metrics import accuracy_score, precision_recall_fscore_support, roc_auc_score, confusion_matrix\n",
     "import pandas as pd\n",
     "\n",
@@ -275,12 +292,15 @@
     "    clf = SVC(C=C, kernel=\"precomputed\", probability=True, class_weight=\"balanced\", random_state=0)\n",
     "    clf.fit(K_train, y_train)\n",
     "    p = clf.predict_proba(K_split)[:,1]\n",
-    "    if thr is None: thr = 0.5\n",
+    "    if thr is None:\n",
+    "        thr = 0.5\n",
     "    yhat = (p >= thr).astype(int)\n",
     "    acc = accuracy_score(y_split, yhat)\n",
     "    prec, rec, f1, _ = precision_recall_fscore_support(y_split, yhat, average=\"binary\", zero_division=0)\n",
-    "    try: auc = roc_auc_score(y_split, p)\n",
-    "    except: auc = float(\"nan\")\n",
+    "    try:\n",
+    "        auc = roc_auc_score(y_split, p)\n",
+    "    except Exception:\n",
+    "        auc = float(\"nan\")\n",
     "    cm = confusion_matrix(y_split, yhat)\n",
     "    return clf, dict(split=split_name, acc=acc, prec=prec, rec=rec, f1=f1, auc=auc, thr=thr), cm, p\n",
     "\n",
