--- a/04_quantum_vqc.ipynb
+++ b/04_quantum_vqc.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fed3c093",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "# (same perf env)\n",
+    "# Normalize underlying BLAS thread counts for reproducible timing\n",
     "import os\n",
     "os.environ.setdefault(\"OMP_NUM_THREADS\", \"8\")\n",
     "os.environ.setdefault(\"OPENBLAS_NUM_THREADS\", \"8\")\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1d8f5ad6",
    "metadata": {},
    "outputs": [
@@ -68,6 +68,7 @@
     }
    ],
    "source": [
+    "# Load k-mer encodings; reduce dimension with PCA; scale features; prepare train/val/test splits\n",
     "from pathlib import Path\n",
     "import json, warnings, numpy as np, pandas as pd\n",
     "import pennylane as qml\n",
@@ -110,11 +111,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4537de86",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define shallow variational circuit (re-uploading style) and helper prediction routine\n",
     "def make_device(n_wires, shots=None, use_mixed=False):\n",
     "    backend = \"default.mixed\" if use_mixed else \"lightning.qubit\"\n",
     "    try:\n",
@@ -125,7 +127,7 @@
     "n_wires = D; L = 2\n",
     "dev = make_device(n_wires, shots=None, use_mixed=False)\n",
     "\n",
-    "# BasicEntanglerLayers import robustly\n",
+    "# Robust import for entangler layer across PennyLane versions\n",
     "try:\n",
     "    BasicEntanglerLayers = qml.BasicEntanglerLayers\n",
     "except AttributeError:\n",
@@ -136,9 +138,11 @@
     "def layer(x, w, p_bitflip=0.0, p_depol=0.0):\n",
     "    qml.AngleEmbedding(x, wires=range(n_wires), rotation=\"Y\")\n",
     "    if p_bitflip>0:\n",
-    "        for i in range(n_wires): qml.BitFlip(p_bitflip, wires=i)\n",
+    "        for i in range(n_wires):\n",
+    "            qml.BitFlip(p_bitflip, wires=i)\n",
     "    if p_depol>0:\n",
-    "        for i in range(n_wires): qml.DepolarizingChannel(p_depol, wires=i)\n",
+    "        for i in range(n_wires):\n",
+    "            qml.DepolarizingChannel(p_depol, wires=i)\n",
     "    BasicEntanglerLayers(w[None, :], wires=range(n_wires))\n",
     "\n",
     "@qml.qnode(dev, interface=\"autograd\")\n",
@@ -150,11 +154,10 @@
     "def predict_proba(X, w, as_numpy=False):\n",
     "    vals = []\n",
     "    for xi in X:\n",
-    "        m = vqc(xi, w)           # may be ArrayBox under autograd\n",
-    "        vals.append((1 + m)/2)   # still autograd-compatible\n",
+    "        m = vqc(xi, w)           # Possibly an autograd ArrayBox\n",
+    "        vals.append((1 + m)/2)   # Map expectation [-1,1] -> probability [0,1]\n",
     "    p = pnp.clip(pnp.stack(vals), 1e-6, 1-1e-6)\n",
-    "    if as_numpy:\n",
-    "        # safe conversion only when NOT differentiating\n",
+    "    if as_numpy:  # Explicit conversion after gradient use\n",
     "        return np.asarray(p)\n",
     "    return p"
    ]
@@ -169,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "257728fa",
    "metadata": {},
    "outputs": [
@@ -195,6 +198,7 @@
     }
    ],
    "source": [
+    "# Optimize VQC parameters with mini-batch stochastic Adam + early stopping on validation loss\n",
     "opt = qml.AdamOptimizer(stepsize=0.05)\n",
     "batch_size = 64; max_epochs = 60; patience = 6\n",
     "best_va = float(\"inf\"); best_w = pnp.array(weights, requires_grad=True); no_improve = 0\n",
@@ -204,21 +208,22 @@
     "    return -pnp.mean(y_true*pnp.log(p_hat) + (1-y_true)*pnp.log(1-p_hat))\n",
     "\n",
     "def iterate_minibatches(X, y, bs, shuffle=True):\n",
-    "    idx = np.arange(len(y)); \n",
-    "    if shuffle: np.random.shuffle(idx)\n",
+    "    idx = np.arange(len(y))\n",
+    "    if shuffle:\n",
+    "        np.random.shuffle(idx)\n",
     "    for i in range(0, len(y), bs):\n",
-    "        sl = idx[i:i+bs]; yield X[sl], y[sl]\n",
+    "        sl = idx[i:i+bs]\n",
+    "        yield X[sl], y[sl]\n",
     "\n",
     "for epoch in range(1, max_epochs+1):\n",
     "    for Xb, yb in iterate_minibatches(Xtr, ytr, batch_size):\n",
     "        def cost(w):\n",
-    "            # keep everything autograd-friendly here\n",
     "            y_true = pnp.array(yb, dtype=float)\n",
     "            p_hat  = predict_proba(Xb, w, as_numpy=False)\n",
     "            return bce_loss(y_true, p_hat)\n",
     "\n",
     "        w_new = opt.step(cost, weights)\n",
-    "        weights = pnp.clip(w_new, -1.5, 1.5)  # light clipping\n",
+    "        weights = pnp.clip(w_new, -1.5, 1.5)  # Simple parameter clipping to stabilize training\n",
     "\n",
     "    p_tr = predict_proba(Xtr, weights); p_va = predict_proba(Xva, weights)\n",
     "    loss_tr = float(bce_loss(ytr, p_tr)); loss_va = float(bce_loss(yva, p_va))\n",
@@ -247,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4511792f",
    "metadata": {},
    "outputs": [
@@ -272,6 +277,7 @@
     }
    ],
    "source": [
+    "# Determine decision threshold maximizing validation F1; report metrics for all splits\n",
     "from sklearn.metrics import f1_score\n",
     "thr_grid = np.linspace(0.1,0.9,33)\n",
     "p_tr = predict_proba(Xtr, weights, as_numpy=True)\n",
@@ -280,14 +286,17 @@
     "best_thr, best_f1 = 0.5, -1.0\n",
     "for t in thr_grid:\n",
     "    f1 = f1_score(yva, (p_va>=t).astype(int), zero_division=0)\n",
-    "    if f1>best_f1: best_thr, best_f1 = float(t), float(f1)\n",
+    "    if f1>best_f1:\n",
+    "        best_thr, best_f1 = float(t), float(f1)\n",
     "\n",
     "def pack(y_true, p, split):\n",
     "    yhat = (p>=best_thr).astype(int)\n",
     "    acc = accuracy_score(y_true, yhat)\n",
     "    prec, rec, f1, _ = precision_recall_fscore_support(y_true, yhat, average=\"binary\", zero_division=0)\n",
-    "    try: auc = roc_auc_score(y_true, p)\n",
-    "    except: auc = float(\"nan\")\n",
+    "    try:\n",
+    "        auc = roc_auc_score(y_true, p)\n",
+    "    except Exception:\n",
+    "        auc = float(\"nan\")\n",
     "    cm = confusion_matrix(y_true, yhat)\n",
     "    return dict(model=\"VQC\", split=split, acc=acc, prec=prec, rec=rec, f1=f1, auc=auc, thr=best_thr), cm\n",
     "\n",
