--- a/06_benchmark_analysis.ipynb
+++ b/06_benchmark_analysis.ipynb
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "# (same perf env)\n",
+    "# Standardize thread usage to reduce variance across numerical backends\n",
     "import os\n",
     "os.environ.setdefault(\"OMP_NUM_THREADS\", \"8\")\n",
     "os.environ.setdefault(\"OPENBLAS_NUM_THREADS\", \"8\")\n",
@@ -57,6 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load encoded datasets, splits, and prepare directories for metrics & statistics\n",
     "from pathlib import Path\n",
     "import json, warnings, numpy as np, pandas as pd, matplotlib.pyplot as plt\n",
     "import pennylane as qml\n",
@@ -92,12 +93,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Compute core classification metrics (thresholded probability -> confusion matrix, precision/recall/F1, AUC)\n",
     "def pack_metrics(y_true, y_prob, split, model, thr=0.5):\n",
     "    y_pred = (y_prob >= thr).astype(int)\n",
     "    acc = accuracy_score(y_true, y_pred)\n",
     "    prec, rec, f1, _ = precision_recall_fscore_support(y_true, y_pred, average=\"binary\", zero_division=0)\n",
-    "    try: auc = roc_auc_score(y_true, y_prob)\n",
-    "    except: auc = float(\"nan\")\n",
+    "    try:\n",
+    "        auc = roc_auc_score(y_true, y_prob)\n",
+    "    except Exception:\n",
+    "        auc = float(\"nan\")\n",
     "    cm = confusion_matrix(y_true, y_pred)\n",
     "    return dict(model=model, split=split, acc=acc, prec=prec, rec=rec, f1=f1, auc=auc, thr=thr), y_pred, cm"
    ]
@@ -117,6 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Train classical SVM baselines (k-mer features, flattened one-hot) with validation F1-based threshold selection\n",
     "# SVM k-mer\n",
     "svm_kmer = make_pipeline(StandardScaler(with_mean=True, with_std=True),\n",
     "                         SVC(C=5.0, kernel=\"rbf\", gamma=\"scale\", probability=True, class_weight=\"balanced\", random_state=0))\n",
@@ -154,6 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load precomputed quantum kernel Gram matrices if available; otherwise rebuild a small kernel on the fly\n",
     "K_trtr_p = RESULTS/\"kernels/K_trtr.npy\"; K_vatr_p = RESULTS/\"kernels/K_vatr.npy\"; K_tetr_p = RESULTS/\"kernels/K_tetr.npy\"\n",
     "if K_trtr_p.exists() and K_vatr_p.exists() and K_tetr_p.exists():\n",
     "    K_trtr = np.load(K_trtr_p); K_vatr = np.load(K_vatr_p); K_tetr = np.load(K_tetr_p)\n",
@@ -164,12 +170,13 @@
     "    Xtr_p = (np.clip(Xtr_p, -3, 3)/3.0)*np.pi; Xva_p = (np.clip(Xva_p, -3, 3)/3.0)*np.pi; Xte_p = (np.clip(Xte_p, -3, 3)/3.0)*np.pi\n",
     "    dev = qml.device(\"default.qubit\", wires=D, shots=None)\n",
     "    def U(x): qml.AngleEmbedding(x, wires=range(D), rotation=\"Y\"); qml.broadcast(qml.CZ, wires=range(D), pattern=\"ring\")\n",
-    "    @qml.qnode(dev) \n",
+    "    @qml.qnode(dev)\n",
     "    def kcirc(a,b): U(a); qml.adjoint(U)(b); return qml.probs(wires=range(D))[0]\n",
-    "    def gram(A,B): \n",
+    "    def gram(A,B):\n",
     "        K = np.zeros((len(A), len(B)))\n",
     "        for i in range(len(A)):\n",
-    "            for j in range(len(B)): K[i,j] = kcirc(A[i], B[j])\n",
+    "            for j in range(len(B)):\n",
+    "                K[i,j] = kcirc(A[i], B[j])\n",
     "        return K\n",
     "    K_trtr = gram(Xtr_p, Xtr_p); K_vatr = gram(Xva_p, Xtr_p); K_tetr = gram(Xte_p, Xtr_p)\n",
     "    ytr_sel = y[tr]\n",
@@ -198,6 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Evaluate trained VQC (load learned weights) and derive validation-optimized threshold\n",
     "D = 6\n",
     "pca = PCA(n_components=D, random_state=11)\n",
     "X_tr_p = pca.fit_transform(X_kmer[tr]); X_va_p = pca.transform(X_kmer[va]); X_te_p = pca.transform(X_kmer[te])\n",
@@ -213,6 +221,7 @@
     "    BasicEntanglerLayers = qml.BasicEntanglerLayers\n",
     "except AttributeError:\n",
     "    from pennylane.templates.layers import BasicEntanglerLayers\n",
+    "\n",
     "def layer(x, w): qml.AngleEmbedding(x, wires=range(D), rotation=\"Y\"); BasicEntanglerLayers(w[None, :], wires=range(D))\n",
     "@qml.qnode(dev, interface=\"autograd\")\n",
     "def vqc(x, w):\n",
@@ -296,7 +305,7 @@
          "type": "float"
         }
        ],
-       "ref": "9ed2c39e-b1b8-4cc4-b54f-6b5e692a64e8",
+       "ref": "e54c0841-d113-4514-999c-98772b28feb3",
        "rows": [
         [
          "5",
@@ -440,6 +449,7 @@
     }
    ],
    "source": [
+    "# Consolidate per-model metrics; persist ROC probability caches and confusion matrix predictions for later visualization\n",
     "df = pd.DataFrame([m1_tr,m1_va,m1_te, m2_tr,m2_va,m2_te, m3_tr,m3_va,m3_te, m4_tr,m4_va,m4_te])\n",
     "df.to_csv(RESULTS/\"metrics/combined.csv\", index=False)\n",
     "\n",
@@ -488,6 +498,7 @@
     }
    ],
    "source": [
+    "# Plot comparative ROC curves for all models on test split\n",
     "fig, ax = plt.subplots(figsize=(6,5))\n",
     "def plot_roc(y_true, y_prob, label):\n",
     "    fpr, tpr, _ = roc_curve(y_true, y_prob); auc = roc_auc_score(y_true, y_prob)\n",
@@ -556,6 +567,7 @@
     }
    ],
    "source": [
+    "# Render confusion matrices for each model with raw counts annotated\n",
     "cms = [(\"SVM_kmer\", cm1_te), (\"SVM_onehot\", cm2_te), (\"QSVM_kernel\", cm3_te), (\"VQC\", cm4_te)]\n",
     "for name, cm in cms:\n",
     "    fig, ax = plt.subplots(figsize=(3.5,3.2))\n",
@@ -577,42 +589,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "869fd983",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'QSVM_vs_SVMkmer': {'n01': 10,\n",
-       "  'n10': 4,\n",
-       "  'chi2': 1.7857142857141581,\n",
-       "  'p_approx': 0.40948412515239035},\n",
-       " 'VQC_vs_SVMkmer': {'n01': 0, 'n10': 1, 'chi2': 0.0, 'p_approx': 1.0},\n",
-       " 'SVM1hot_vs_SVMkmer': {'n01': 0, 'n10': 1, 'chi2': 0.0, 'p_approx': 1.0}}"
+       "[{'model': 'SVM_kmer', 'f1_val': 0.9896, 'f1_test': 0.958},\n",
+       " {'model': 'SVM_onehot', 'f1_val': 0.9896, 'f1_test': 0.9599},\n",
+       " {'model': 'QSVM_kernel', 'f1_val': 0.9807, 'f1_test': 0.9464},\n",
+       " {'model': 'VQC', 'f1_val': 0.9777, 'f1_test': 0.9599}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from math import fabs, exp\n",
-    "def mcnemar(y_true, yhat_a, yhat_b):\n",
-    "    n01 = int(((yhat_a == y_true) & (yhat_b != y_true)).sum())\n",
-    "    n10 = int(((yhat_a != y_true) & (yhat_b == y_true)).sum())\n",
-    "    chi2 = (fabs(n01 - n10) - 1)**2 / (n01 + n10 + 1e-12)\n",
-    "    p = exp(-chi2/2)\n",
-    "    return {\"n01\":n01, \"n10\":n10, \"chi2\":chi2, \"p_approx\":p}\n",
+    "# Summarize macro F1 on validation and test splits for a concise textual overview\n",
+    "# 'df' (combined metrics) was created earlier; alias it here to avoid NameError\n",
+    "metrics_combined = df\n",
     "\n",
-    "stats = {\n",
-    "    \"QSVM_vs_SVMkmer\": mcnemar(y[te], (p_te>=m1_te[\"thr\"]).astype(int), (r_te>=m3_te[\"thr\"]).astype(int)),\n",
-    "    \"VQC_vs_SVMkmer\":  mcnemar(y[te], (p_te>=m1_te[\"thr\"]).astype(int), (s_te>=m4_te[\"thr\"]).astype(int)),\n",
-    "    \"SVM1hot_vs_SVMkmer\": mcnemar(y[te], (p_te>=m1_te[\"thr\"]).astype(int), (q_te>=m2_te[\"thr\"]).astype(int)),\n",
-    "}\n",
-    "with open(RESULTS/\"stats/mcnemar.json\",\"w\") as f: json.dump(stats, f, indent=2)\n",
-    "stats"
+    "summary_rows = []\n",
+    "for m in [\"SVM_kmer\", \"SVM_onehot\", \"QSVM_kernel\", \"VQC\"]:\n",
+    "    row = {\"model\": m}\n",
+    "    for split in [\"val\", \"test\"]:\n",
+    "        sub = metrics_combined[(metrics_combined.model == m) & (metrics_combined.split == split)]\n",
+    "        row[f\"f1_{split}\"] = round(float(sub.f1.iloc[0]), 4)\n",
+    "    summary_rows.append(row)\n",
+    "summary_rows"
    ]
   }
  ],
