--- a/08_appendix_reproducibility.ipynb
+++ b/08_appendix_reproducibility.ipynb
@@ -18,28 +18,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "5dd45d2f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'8'"
+       "(WindowsPath('results/appendix/dataset_audit.json'),\n",
+       " WindowsPath('results/appendix/seeds.json'),\n",
+       " WindowsPath('results/appendix/environment.json'))"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# (same perf env)\n",
-    "import os\n",
-    "os.environ.setdefault(\"OMP_NUM_THREADS\", \"8\")\n",
-    "os.environ.setdefault(\"OPENBLAS_NUM_THREADS\", \"8\")\n",
-    "os.environ.setdefault(\"MKL_NUM_THREADS\", \"8\")\n",
-    "os.environ.setdefault(\"NUMEXPR_NUM_THREADS\", \"8\")"
+    "# Load reproducibility artifacts (dataset audit, environment, seeds) paths\n",
+    "from pathlib import Path\n",
+    "import json, textwrap, platform, sys, importlib, datetime as dt\n",
+    "base = Path('results/appendix')\n",
+    "audit_path = base / 'dataset_audit.json'\n",
+    "seeds_path = base / 'seeds.json'\n",
+    "env_path = base / 'environment.json'\n",
+    "audit_path, seeds_path, env_path"
    ]
   },
   {
@@ -52,59 +56,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "82a22771",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'python': '3.10.13',\n",
-       " 'platform': 'Windows 10',\n",
-       " 'packages': {'numpy': '2.1.3',\n",
-       "  'pandas': '2.3.1',\n",
-       "  'scikit_learn': '1.7.1',\n",
-       "  'biopython': '1.85',\n",
-       "  'matplotlib': '3.10.0',\n",
-       "  'pennylane': '0.42.1'},\n",
-       " 'notes': 'Notebook-only workflow; seeds and splits persisted in data/processed.'}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Audit snippet:\n",
+      "{\n",
+      "  \"n_samples\": 1490,\n",
+      "  \"negatives(RNA)\": 115,\n",
+      "  \"positives(CDS)\": 1375,\n",
+      "  \"splits\": {\n",
+      "    \"test\": 298,\n",
+      "    \"train\": 894,\n",
+      "    \"val\": 298\n",
+      "  },\n",
+      "  \"stride\": 128,\n",
+      "  \"window_length\": 256\n",
+      "}\n"
+     ]
     }
    ],
    "source": [
-    "from pathlib import Path\n",
-    "import json, platform, sys, warnings, numpy as np, pandas as pd\n",
+    "# Helper to pretty print JSON with controlled width for markdown embedding\n",
+    "def show_json(path, width=92):\n",
+    "    with open(path) as f:\n",
+    "        data = json.load(f)\n",
+    "    txt = json.dumps(data, indent=2, sort_keys=True)\n",
+    "    # Wrap only very long lines (rare) for readability in narrow renderers\n",
+    "    wrapped = []\n",
+    "    for line in txt.splitlines():\n",
+    "        if len(line) > width:\n",
+    "            wrapped.extend(textwrap.wrap(line, width=width, subsequent_indent='  '))\n",
+    "        else:\n",
+    "            wrapped.append(line)\n",
+    "    return '\\n'.join(wrapped)\n",
     "\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "ROOT = Path(\".\"); PROCESSED = ROOT/\"data/processed\"; RESULTS = ROOT/\"results\"; APPX = RESULTS/\"appendix\"\n",
-    "APPX.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "def pkg_version(pkg):\n",
-    "    try:\n",
-    "        mod = __import__(pkg)\n",
-    "        return getattr(mod, \"__version__\", \"unknown\")\n",
-    "    except Exception:\n",
-    "        return \"not_installed\"\n",
-    "\n",
-    "env = {\n",
-    "  \"python\": sys.version.split()[0],\n",
-    "  \"platform\": f\"{platform.system()} {platform.release()}\",\n",
-    "  \"packages\": {\n",
-    "    \"numpy\": pkg_version(\"numpy\"),\n",
-    "    \"pandas\": pkg_version(\"pandas\"),\n",
-    "    \"scikit_learn\": pkg_version(\"sklearn\"),\n",
-    "    \"biopython\": pkg_version(\"Bio\"),\n",
-    "    \"matplotlib\": pkg_version(\"matplotlib\"),\n",
-    "    \"pennylane\": pkg_version(\"pennylane\"),\n",
-    "  },\n",
-    "  \"notes\": \"Notebook-only workflow; seeds and splits persisted in data/processed.\"\n",
-    "}\n",
-    "with open(APPX/\"environment.json\",\"w\") as f: json.dump(env, f, indent=2)\n",
-    "env"
+    "print('Audit snippet:')\n",
+    "print('\\n'.join(show_json(audit_path).splitlines()[:12]))"
    ]
   },
   {
@@ -117,129 +109,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "b001f5e3",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "n_samples",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "positives(CDS)",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "negatives(RNA)",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "window_length",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "stride",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "splits",
-         "rawType": "object",
-         "type": "unknown"
-        }
-       ],
-       "ref": "422dceae-7dde-4f30-ace4-5cec6204142c",
-       "rows": [
-        [
-         "0",
-         "1490",
-         "1375",
-         "115",
-         "256",
-         "128",
-         "{'train': 894, 'val': 298, 'test': 298}"
-        ]
-       ],
-       "shape": {
-        "columns": 6,
-        "rows": 1
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>n_samples</th>\n",
-       "      <th>positives(CDS)</th>\n",
-       "      <th>negatives(RNA)</th>\n",
-       "      <th>window_length</th>\n",
-       "      <th>stride</th>\n",
-       "      <th>splits</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1490</td>\n",
-       "      <td>1375</td>\n",
-       "      <td>115</td>\n",
-       "      <td>256</td>\n",
-       "      <td>128</td>\n",
-       "      <td>{'train': 894, 'val': 298, 'test': 298}</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   n_samples  positives(CDS)  negatives(RNA)  window_length  stride  \\\n",
-       "0       1490            1375             115            256     128   \n",
-       "\n",
-       "                                    splits  \n",
-       "0  {'train': 894, 'val': 298, 'test': 298}  "
+       "'{\\n  \"n_samples\": 1490,\\n  \"negatives(RNA)\": 115,\\n  \"positives(CDS)\": 1375,\\n  \"splits\": {\\n    \"test\": 298,\\n    \"train\": 894,\\n    \"val\": 298\\n  },\\n  \"stride\": 128,\\n  \"window_length\": 256\\n}'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "enc = np.load(PROCESSED/\"encodings.npz\", allow_pickle=True)\n",
-    "with open(PROCESSED/\"splits.json\") as f: SPL = json.load(f)\n",
-    "y = enc[\"y\"].astype(int); W = int(enc[\"window\"]); STRIDE = int(enc[\"stride\"]) if \"stride\" in enc else None\n",
-    "audit = {\"n_samples\": int(len(y)), \"positives(CDS)\": int(y.sum()), \"negatives(RNA)\": int((y==0).sum()),\n",
-    "         \"window_length\": W, \"stride\": STRIDE, \"splits\": {k: len(v) for k,v in SPL.items()}}\n",
-    "with open(APPX/\"dataset_audit.json\",\"w\") as f: json.dump(audit, f, indent=2)\n",
-    "pd.DataFrame([audit])"
+    "# Display full dataset audit JSON (structured metadata about samples / splits)\n",
+    "show_json(audit_path)"
    ]
   },
   {
@@ -252,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "d4698dfa",
    "metadata": {},
    "outputs": [
@@ -260,25 +147,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote: results\\appendix\\README.md\n"
+      "Captured timestamp: None\n",
+      "Platform: Windows 10\n",
+      "Python: None\n",
+      "\n",
+      "Packages (subset):\n",
+      "  numpy==2.1.3\n",
+      "  pandas==2.3.1\n",
+      "  scikit_learn==1.7.1\n",
+      "  biopython==1.85\n",
+      "  matplotlib==3.10.0\n",
+      "  pennylane==0.42.1\n"
      ]
     }
    ],
    "source": [
-    "seeds = {\"split_train_test\": 42, \"split_train_val\": 43, \"pca_kernels\": 7, \"pca_vqc\": 11, \"noise_sweeps\": 17, \"analysis\": 23}\n",
-    "with open(APPX/\"seeds.json\",\"w\") as f: json.dump(seeds, f, indent=2)\n",
-    "seeds\n",
-    "\n",
-    "md = []\n",
-    "md.append(\"# Appendix — Reproducibility Bundle\\n\")\n",
-    "md.append(\"This folder contains lightweight artifacts to aid auditing and re-running.\\n\")\n",
-    "md.append(\"## Files\\n- `environment.json`\\n- `dataset_audit.json`\\n- `seeds.json`\\n\")\n",
-    "md.append(\"## How to Reproduce\\n\")\n",
-    "md.append(\"1. Run notebooks in order: 01 → 02 → 03 → 04 → 05 → 06 → 07 → 08.\\n\")\n",
-    "md.append(\"2. Ensure `data/processed/encodings.npz` and `splits.json` exist after Step 01.\\n\")\n",
-    "md.append(\"3. Metrics and figures appear under `results/metrics/` and `results/figures/`.\\n\")\n",
-    "(APPX/\"README.md\").write_text(\"\\n\".join(md), encoding=\"utf-8\")\n",
-    "print(\"Wrote:\", APPX/\"README.md\")"
+    "# Inspect environment capture: Python version, platform, installed key packages\n",
+    "with open(env_path) as f: env = json.load(f)\n",
+    "print('Captured timestamp:', env.get('timestamp'))\n",
+    "print('Platform:', env.get('platform'))\n",
+    "print('Python:', env.get('python_version'))\n",
+    "print('\\nPackages (subset):')\n",
+    "for name, ver in list(env.get('packages', {}).items())[:18]:\n",
+    "    print(f\"  {name}=={ver}\")"
    ]
   },
   {
@@ -291,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "98159317",
    "metadata": {},
    "outputs": [
@@ -306,23 +197,15 @@
        " 'analysis': 23}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Update this list if you use more seeds in other notebooks\n",
-    "seeds = {\n",
-    "  \"split_train_test\": 42,\n",
-    "  \"split_train_val\": 43,\n",
-    "  \"pca_kernels\": 7,\n",
-    "  \"pca_vqc\": 11,\n",
-    "  \"noise_sweeps\": 17,\n",
-    "  \"analysis\": 23\n",
-    "}\n",
-    "with open(APPX/\"seeds.json\",\"w\") as f:\n",
-    "    json.dump(seeds, f, indent=2)\n",
+    "# Show seed configuration used across experiments ensuring reproducible splits / model init\n",
+    "with open(seeds_path) as f:\n",
+    "    seeds = json.load(f)\n",
     "seeds"
    ]
   },
@@ -336,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "fa015aa3",
    "metadata": {},
    "outputs": [
@@ -344,38 +227,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote: results\\appendix\\README.md\n",
-      "# Appendix — Reproducibility Bundle\n",
+      "Missing packages: ['scikit_learn', 'biopython']\n",
+      "Version mismatches:\n",
       "\n",
-      "This folder contains lightweight, human-readable artifacts to aid auditing and re-running.\n",
-      "\n",
-      "## Files\n",
-      "\n",
-      "- `environment.json` — Python/platform and key package versions.\n",
-      "- `dataset_audit.json` — counts, window config, and split sizes.\n",
-      "- `seeds.json` — random seeds used across notebooks.\n",
-      "\n",
-      "## How to Reproduce (quick)\n",
-      "\n",
-      "1. Recreate the Conda env; open notebooks in ord ...\n"
+      "Checked 6 packages (truncated).\n"
      ]
     }
    ],
    "source": [
-    "md = []\n",
-    "md.append(\"# Appendix — Reproducibility Bundle\\n\")\n",
-    "md.append(\"This folder contains lightweight, human-readable artifacts to aid auditing and re-running.\")\n",
-    "md.append(\"\\n## Files\\n\")\n",
-    "md.append(\"- `environment.json` — Python/platform and key package versions.\")\n",
-    "md.append(\"- `dataset_audit.json` — counts, window config, and split sizes.\")\n",
-    "md.append(\"- `seeds.json` — random seeds used across notebooks.\")\n",
-    "md.append(\"\\n## How to Reproduce (quick)\\n\")\n",
-    "md.append(\"1. Recreate the Conda env; open notebooks in order: `01_data_preparation → 02_classical_baselines → 03_quantum_kernel → 04_quantum_vqc → 05_noise_robustness → 06_benchmark_analysis → 07_reporting → 08_appendix_reproducibility`.\\n\")\n",
-    "md.append(\"2. Ensure `data/processed/encodings.npz` and `splits.json` are present from Step 01.\\n\")\n",
-    "md.append(\"3. Metrics and figures will appear under `results/metrics/` and `results/figures/`.\\n\")\n",
-    "(APPX/\"README.md\").write_text(\"\\n\".join(md), encoding=\"utf-8\")\n",
-    "print(\"Wrote:\", APPX/\"README.md\")\n",
-    "print((APPX/\"README.md\").read_text()[:400], \"...\")"
+    "# Programmatic environment verification: dynamically import recorded packages and report versions\n",
+    "missing = []\n",
+    "version_mismatch = []\n",
+    "recorded = env.get('packages', {})\n",
+    "for pkg, rec_ver in list(recorded.items())[:40]:  # limit to first 40 to keep output manageable\n",
+    "    try:\n",
+    "        mod = importlib.import_module(pkg)\n",
+    "        got_ver = getattr(mod, '__version__', 'unknown')\n",
+    "        if rec_ver and got_ver != rec_ver:\n",
+    "            version_mismatch.append((pkg, rec_ver, got_ver))\n",
+    "    except Exception:\n",
+    "        missing.append(pkg)\n",
+    "\n",
+    "print('Missing packages:', missing if missing else 'None')\n",
+    "print('Version mismatches:')\n",
+    "for pkg, exp, got in version_mismatch[:15]:\n",
+    "    print(f'  {pkg}: recorded={exp} current={got}')\n",
+    "print('\\nChecked', min(40, len(recorded)), 'packages (truncated).')"
    ]
   }
  ],
